<?php 
namespace gestion_stage\Controller ;
class abstractController{ public function load_oopsView(){ include __DIR__."/../views/oopsView.php" ; } }


?>